[metadata]
name = algae
version = 0.0.0
description = implementations of DSA in CLRS and EPI
author = Sudipta Karmakar
author_email = sudo.karmakar@gmail.com
url = https://github.com/sudiptakarmakar/algae
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    Bug Tracker = https://github.com/sudiptakarmakar/algae/issues
keywords =
    python
    leetcode
    interview
    data structures
    algorithms
    CLRS
    EPI
classifiers =
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find_namespace:
install_requires = file: requirements.txt
python_requires = >=3.12
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* =
    py.typed
    *.txt
    *.rst

[flake8]
max-line-length = 88
extend-ignore = C901 E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 10
jobs = 8

[mypy]
files = algae
strict = true

[tool:pytest]
addopts = --verbose
